syntax = "proto3";

package chat;

// REGISTRO DE USUARIOS NUEVOS
message UserRegistration {
    string username = 1;
    string ip = 2;
}

// INFORMACION DEL USUARIO BASE
message UserInfo {
    string username = 1;
    string status = 2;
    string ip = 3;
}

// SOLICITAR INFORMACION DE UN USUARIO O DE TODOS
message UserRequest {
    string user = 1;
}

// ENVIADO POR EL SERVIDOR
message ConnectedUsersResponse {
    repeated UserInfo connectedUsers = 1;
}

// CAMBIAR DE ESTADO
message ChangeStatus {
    string username = 1;
    string status = 2;
}

// ENVIO DE MENSAJES (DIRECTOS || PA TODOS)
message MessageCommunication {
    string message = 1;
    string recipient = 2;
    string sender = 3;
}

// CLIENTE ENVIA PETICION
message ClientPetition {
    int32 option = 1;
    UserRegistration registration = 2;
    UserRequest users = 3;
    ChangeStatus change = 4;
    MessageCommunication messageCommunication = 5;
}

// RESPUESTA DEL SERVIDOR
message ServerResponse {
    int32 option = 1;
    int32 code = 2;
    string serverMessage = 3;
    ConnectedUsersResponse connectedUsers = 4;
    MessageCommunication messageCommunication = 5;
    UserInfo userInfoResponse = 6;
    ChangeStatus change = 7;
}

